# TiaraCE

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: FindSDL2.cmake
spec/: SPECIFICATIONS.md
spec/docs/ui_system/shell/widgets/: widget_types_and _behavior.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  event_handler.cpp  event_handler.h  main.cpp  main.h  video.cpp  video.h
src/core/: CMakeLists.txt  memory_manager.cpp
src/engine/: CMakeLists.txt
src/server/: CMakeLists.txt
