project(client)

###############################################################################
# Source Files
###############################################################################
set(src_files
"client.cpp"
)

###############################################################################
# Library Files
###############################################################################
set(lib_files
${SDL2_LIBRARIES}
)

###############################################################################
# Compiler
###############################################################################
add_executable(tiarace ${src_files})

###############################################################################
# Linker
###############################################################################
target_link_libraries(tiarace core ${lib_files})
