project(tiarace)

###############################################################################
# Source Files
###############################################################################
set(src_files
"event_loop.cpp"
"event_loop.h"
"game_loop.cpp"
"game_loop.h"
"server.cpp"
"memory_manager.cpp"
"memory_manager.h"
)

###############################################################################
# Library Files
###############################################################################
set(lib_files
${SDL2_LIBRARIES}
)

###############################################################################
# Compiler
###############################################################################
add_executable(tiaraceded ${src_files})
add_executable(tiarace ${src_files})

###############################################################################
# Linker
###############################################################################
target_link_libraries(tiaraceded tiarace ${lib_files})
