project(TiaraCE-Engine)

###############################################################################
# Source Files
###############################################################################
set(src_files
"engine.cpp"
)

###############################################################################
# Library Files
###############################################################################
set(lib_files
${SDL2_LIBRARIES}
)

###############################################################################
# Compiler
###############################################################################
add_library(TiaraCE-Engine STATIC ${src_files})

###############################################################################
# Linker
###############################################################################
target_link_libraries(TiaraCE-Engine ${lib_files})
