project(TiaraCE-Server)

###############################################################################
# Source Files
###############################################################################
set(src_files
"eventLoop.cpp"
"eventLoop.h"
"gameLoop.cpp"
"gameLoop.h"
"server.cpp"
"memoryManager.cpp"
"memoryManager.h"
)

###############################################################################
# Library Files
###############################################################################
set(lib_files
${SDL2_LIBRARIES}
)

###############################################################################
# Compiler
###############################################################################
add_executable(TiaraCE-Server ${src_files})

###############################################################################
# Linker
###############################################################################
target_link_libraries(TiaraCE-Server TiaraCE-Engine ${lib_files})
